<resources>
    <string name="app_name">ELIXIR</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="welcome_msg">Welcome Nandha!!!</string>
    <string name="password">Password</string>
    <string name="imei">IMEI</string>
    <string name="logo_description">logo</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="re_send">Resend OTP</string>
    <string name="send_photos">Send Photos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="location_msg">You are in Tambaram</string>
    <string name="attendance">Attendance</string>
    <string name="service_receipt">Service Receipt</string>
     <string name="title_activity_service_receipt">Service Receipt</string>
    <string name="otw">OTW</string>
    <string name="status">Status</string>
    <string name="leads">Leads</string>
    <string name="cms">CMS</string>
    <string name="payment">PAYMENT</string>
    <string name="g_news">General News</string>
    <string name="p_news">Personal News</string>
    <string name="details">Details</string>
    <string name="in_time">IN Time</string>
    <string name="tp">TP</string>
    <string name="out_time">OUT Time</string>
    <string name="compe">Compe</string>
    <string name="comp">Comp</string>
    <string name="lock_date">Lock Date</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="add_image">Add Image</string>
    <string name="add_signature">Add Signature</string>
    <string name="add_vehicle_image">Add Vehicle Image</string>
    <string name="add_document_image">Add Documents Image</string>
    <string name="add">ADD</string>
    <string name="tw_count">TW Count</string>
    <string name="tw_cms_amount">TW CMS Amount</string>
    <string name="tw_service_charge">TW Service Charge</string>
    <string name="plus_icon">+</string>
    <string name="save">Save</string>
    <string name="send_all">Send All Photos</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="service_charge">Service Charges</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="policy_period">Policy Period</string>
    <string name="policy_type">Policy Type</string>
    <string name="e_mail">E-Mail</string>
    <string name="policy_no">Policy No</string>
    <string name="policy_amount">Policy Amount</string>
    <string name="od">OD</string>
    <string name="premium_amount">Premium Amount</string>
    <string name="payment_type">Payment Type</string>
    <string name="service_receipt_request">Do you want Receipt?</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="idv">IDV</string>
    <string name="previous_insurance">Previous Insurer</string>
    <string name="risk_end_date">Risk End Date</string>
    <string name="ncb">NCB</string>
    <string name="year_of_manufacture">Year of Manufacture</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="title_activity_otw">OTW</string>
    <string name="remarks">Remarks</string>
    <string name="customer_name">Customer Name</string>
    <string name="company_name">Company Name</string>
    <string name="title_activity_otwlist">OTWListActivity</string>
    <string name="no_otw">No OTW found. Please add new.</string>
    <string name="no_cms">No CMS to show.</string>
    <string name="no_files">No Files to show.</string>
    <string name="no_lists">No List to show.</string>
    <string name="no_policy">No Policy to show.</string>
    <string name="title_activity_capture_signature">CaptureSignatureActivity</string>
    <string name="title_activity_capture_signature_main">CaptureSignatureMain</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cash_in_hand">Cash in Hand</string>
    <string name="go">GO</string>
    <string name="date">Date</string>
    <string name="cms_amount">CMS Amount</string>
    <string name="total_cms">Total Amount</string>
    <string name="selected_cms">Selected Item</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="entry">ENTRY</string>
    <string name="report">REPORT</string>
    <string name="paymententry">Payment Entry</string>
    <string name="executive_name">Executive Name</string>
    <string name="total">Total</string>
    <string name="cheque_amount">Cheque Amount</string>
    <string name="cash_amount">Cash Amount</string>
    <string name="payment_report">Payment Report</string>
    <string name="pending">Pending</string>
    <string name="collected">Collected</string>
    <string name="no_data">No values to show.</string>
    <string name="title_activity_sync">SyncActivity</string>
    <string name="send_policy">POLICY</string>
    <string name="prepared_by">Policy Prepare By</string>
    <string name="office">Office</string>
    <string name="self">Self</string>
    <string name="title_activity_add_policy">AddPolicyActivity</string>
    <string name="address">Address</string>
    <string name="pincode">Pin Code</string>
    <string name="company_type">Company Type</string>
    <string name="engine_no">Engine No</string>
    <string name="chasis_no">Chasis No</string>
    <string name="date_of_reg">Date of Registaration</string>
    <string name="variant">Variant</string>
    <string name="cc">CC</string>
    <string name="check_previous_insurance">Did Customer have Previous Insurance?</string>
    <string name="od_discount">OD Discount</string>
    <string name="risk_start_date">Risk Start Date</string>
    <string name="finance">Finance</string>
    <string name="financier_name">Financier Name</string>
    <string name="policy">POLICIES</string>
    <string name="title_activity_agent_payment_entry">AgentPaymentEntryActivity</string>
    <string name="title_activity_photos_policy">SEND PHOTOS</string>
    <string name="total_outstanding">Total Outstanding</string>
    <string name="unreached_payment">Unreached Payment</string>
    <string name="paid_to">Paid To</string>
    <string name="collector_name">Collector Name</string>
    <string name="cash_collector_password">Cash Collector Password</string>
    <string name="warningms"><![CDATA[<font color=#FF0000>(Add atleast 1 Cheque Image)]]></string>
    <string name="imt">IMT 23</string>
    <string name="nilDip">Nil DIP</string>
    <string name="claims">Claims</string>
    <string name="nameTransfer">Name Transfer</string>
    <string name="previousInsuranceNo">Previous Insurance No</string>

    <string name="right_side">Right Side</string>
    <string name="left_side">Left Side</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="odo_meter_side">ODO Meter Side</string>
    <string name="engine_chasis_no">Engine No/Chasis No</string>
    <string name="engine_compartment">Engine Compartment</string>
    <string name="register_no">Register No</string>
    <string name="battery_snap">Close snap of Battery</string>
    <string name="carriage_photo">Under Carriage Phots</string>

    <string name="dashboard_snap">Close Snap of Dashboard</string>
    <string name="wild_glass">Wild Screen Glass</string>
    <string name="dickey_photos">Dickey Photos</string>
    <string name="rc_copy">RC Copy</string>
    <string name="invoice_copy">Vehicle Invoice Copy</string>
    <string name="previous_policy_copy">Previous Policy Copy</string>
    <string name="vehicle_parts">Non Intact Vehicle Parts</string>
    <string name="cheque_photo">Cheque Photos</string>
    <string name="policy_id">Policy ID:</string>
    <string name="vehicle_number">Vehicle NO:</string>
    <string name="amount_type">Amount Type</string>
    <string name="account_no">Account No</string>
    <string name="otp">OTP</string>
    <string name="paid_by">Paid By</string>
    <string name="receive_files">Receive Files</string>
    <string name="title_activity_receive_files">Receive Files</string>
    <string name="load_more">Load Old</string>
    <string name="back">Back</string>
    <string name="executive_report">Executive Report</string>
    <string name="image_info_msg">After Attaching the image, click the image and you will have option to send Photo.</string>
    <string name="title_activity_executive_report">ExecutiveReportActivity</string>
    <string name="view">View</string>
    <string name="fdat">From Date</string>
    <string name="tdat">To Date</string>
    <string name="exe_report">Executive Report</string>
    <string name="policy_count">Policy Count</string>
    <string name="leads_count">Leads Count</string>
    <string name="otw_count">OTW Count</string>
    <string name="feed"><u> Feedback?</u></string>
    <string name="feeds"> Feedback</string>
</resources>
