<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemView"
    android:layout_gravity="top"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textSize="16dip"
        android:text="@string/date"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>

    <TextView
        android:id="@+id/intime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/in_time"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/outtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intime"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/out_time"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/policycount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outtime"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/policy_count"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/leadscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policycount"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/leads_count"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/otwcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leadscount"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/otw_count"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
</RelativeLayout>