<?xml version="1.0" encoding="utf-8"?>
<!--  Single List Item Design -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemView"
    android:layout_gravity="top"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<TextView
    android:id="@+id/date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:textSize="16dip"
    android:text="@string/date"
    android:textStyle="bold"
    android:focusable="false">
</TextView>

    <TextView
        android:id="@+id/cmsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:padding="10dip"
        android:textSize="16dip"
        android:text="@string/cms_amount"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/serviceAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmsAmount"
        android:padding="10dip"
        android:textSize="16dip"
        android:text="@string/service_charge"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dip"
        android:onClick="selectPaymentDetailsList"
        android:focusable="false"
        />
</RelativeLayout>