<?xml version="1.0" encoding="utf-8"?>
<!--  Single List Item Design -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemView"
    android:layout_gravity="top"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<TextView
    android:id="@+id/date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:textSize="16dip"
    android:text="@string/date"
    android:textStyle="bold"
    android:focusable="false">
</TextView>

    <TextView
        android:id="@+id/cmsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/cms_amount"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cmsAmount"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/status"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/otw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/otw"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otw"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/otw"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/paidAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalAmount"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/otw"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
    <TextView
        android:id="@+id/differeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paidAmount"
        android:paddingLeft="10dip"
        android:paddingBottom="10dip"
        android:textSize="16dip"
        android:text="@string/otw"
        android:textStyle="bold"
        android:focusable="false">
    </TextView>
</RelativeLayout>